Перевод приложения на реактивность